--- a/src/App.css
+++ b/src/App.css
@@ -427,3 +427,22 @@ select {
     padding: 6px 8px; /* Менший відступ */
   }
 }
+
+.btn-search {
+  background-color: #ff6f61;
+  margin-top: 40px;
+  width: 100%;
+}
+
+.btn {
+  display: inline-block;
+  padding: 10px 15px;
+  margin-top: 20px;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 6px;
+  text-align: center;
+  cursor: pointer;
+  border: none;
+  color: #fff;
+}
